# License_Plate_Reader_App

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .sourcery.yaml  Makefile  README.md  full_test.py  labels_eda.py  pre_commit.yaml  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: model_full  model_weights  predictions.csv
src/: __init__.py
src/data/: __init__.py  imageprocess.py  make_dataset.py  makedataset.py  makedataset_recog.py  segmentation.py
src/features/: __init__.py  build_features.py  detection.py
src/models/: predict_model.py  processhelpers.py  segmentation.py  train_model.py
src/visualization/: labels_eda.py  visualize.py
tests/: test_environment.py
web_app/: Dockerfile  app.py
web_app/static/uploads/: .gitignore
web_app/templates/: index.html  results.html  results_.html  upload.html
