[tool.poetry]
name = "license-plate-reader-app"
version = "1.0.0"
description = ""
authors = ["Business-Data-Wizard  <49175856+Business-Wizard@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow = "<2.12.0"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
pandas = "^2.0.1"
flask = "^2.3.2"
opencv-python = "^4.7.0.72"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true


[tool.isort]
profile = "black"
line_length = 100


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
show_error_codes = true
check_untyped_defs = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "W", "C90", "PL", "TRY", "RUF", "ERA", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PT", "PTH", "PYI", "RET", "RSE", "SIM", "SLF", "TCH", "TID", "UP", "YTT", "ANN", "S", "Q", "T", "D", "N", "A", "B", "C", "C4", "G", "I"]
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "C4", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".nox",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.mccabe]
max-complexity = 7

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
